--- a/templates/presidencia.html
+++ b/templates/presidencia.html
@@ -11,22 +11,19 @@
         <h1>Presidencia de los Estados Unidos Mexicanos</h1>
         <div class="rectangles">
             <div class="candidate">
-                <img src="img/morena.png" alt="Partido 1">
-                <h3>Nombre del candidato</h3>
-                <p>Apodo del candidato</p>
-                <p>Suplente</p>
+                <img src="img/pan.png" alt="Partido 1">
+                <h3>Bertha Xóchitl Gálvez Ruíz</h3>
+                <p>"Xóchitl"</p>
             </div>
             <div class="candidate">
                 <img src="img/pri.png" alt="Partido 2">
                 <h3>Nombre del candidato</h3>
                 <p>Apodo del candidato</p>
-                <p>Suplente</p>
             </div>
             <div class="candidate">
                 <img src="img/morena.png" alt="Partido 3">
                 <h3>Nombre del candidato</h3>
                 <p>Apodo del candidato</p>
-                <p>Suplente</p>
             </div>
         </div>
         <div class="buttons">
