--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     {% include 'components/navbar.html' %}
-    <div id="content">
+    <div id="content" class="mt-5">
         {% block content %}{% endblock %}
     </div>
     <script src="{{ url_for('static', filename='bootstrap/jquery.min.js') }}"></script>
@@ -21,4 +21,3 @@
     <script src="{{ url_for('static', filename='bootstrap/bootstrap.min.js') }}"></script>
 </body>
 </html>
-    
