--- a/templates/presidencia.html
+++ b/templates/presidencia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elecciones México</title>
-    <link rel="stylesheet" href="presi.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='presi.css') }}">
 </head>
 <body>
     <div class="container">
@@ -12,17 +12,17 @@
         <h1>Presidencia de los Estados Unidos Mexicanos</h1>
         <div class="rectangles">
             <div class="candidate">
-                <img src="img/pan.png" alt="Partido 1">
+                <img src="{{ url_for('static', filename='img/pan.png') }}" alt="Partido 1">
                 <h3>Bertha Xóchitl Gálvez Ruíz</h3>
                 <p>"Xóchitl"</p>
             </div>
             <div class="candidate">
-                <img src="img/pri.png" alt="Partido 2">
+                <img src="{{ url_for('static', filename='img/pri.png') }}" alt="Partido 2">
                 <h3>Nombre del candidato</h3>
                 <p>Apodo del candidato</p>
             </div>
             <div class="candidate">
-                <img src="img/morena.png" alt="Partido 3">
+                <img src="{{ url_for('static', filename='img/morena.png') }}" alt="Partido 3">
                 <h3>Nombre del candidato</h3>
                 <p>Apodo del candidato</p>
             </div>
