Update candidate names in `presidencia.html` template

--- a/templates/presidencia.html
+++ b/templates/presidencia.html
@@ -18,13 +18,12 @@
             </div>
             <div class="candidate">
                 <img src="{{ url_for('static', filename='img/pri.png') }}" alt="Partido 2">
-                <h3>Nombre del candidato</h3>
-                <p>Apodo del candidato</p>
+                <h3>Alejandro Moreno Cardenas</h3>
+                <p>"Alito"</p>
             </div>
             <div class="candidate">
                 <img src="{{ url_for('static', filename='img/morena.png') }}" alt="Partido 3">
-                <h3>Nombre del candidato</h3>
-                <p>Apodo del candidato</p>
+                <h3>Claudia Sheinbaum Pardo</h3>
             </div>
         </div>
         <div class="buttons">
