Update candidate names in `presidencia.html` template
correcciones

Add Entidades

database add data

--- a/templates/votar.html
+++ b/templates/votar.html
@@ -36,7 +36,7 @@
                 <!-- Agrega más opciones según sea necesario -->
             </select>
         </div>
-        <button type="submit" class="btn">Entrar</button>
+        <button type="submit" class="btn" formaction="/Presidencia">Entrar</button>
     </form>
 </div>
 {% endblock %}
