--- a/static/index.css
+++ b/static/index.css
@@ -6,3 +6,19 @@
     --color-warning: #ffc107;
     --color-info: #17a2b8;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: aliceblue;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+body {
+    min-height: 100vh;
+    background-image: linear-gradient(135deg, transparent 0%, transparent 21%,rgba(131, 20, 209,0.4) 21%, rgba(131, 20, 209,0.4) 51%,transparent 51%, transparent 100%),linear-gradient(45deg, transparent 0%, transparent 16%,rgb(131, 20, 209) 16%, rgb(131, 20, 209) 21%,rgb(88, 22, 184) 21%, rgb(88, 22, 184) 64%,transparent 64%, transparent 100%),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255)); 
+    background-size: cover;
+    background-position: center;
+}
