--- a/static/votacion.css
+++ b/static/votacion.css
@@ -1,23 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-body {
-    padding-top: 56px; /* Ajusta este valor según la altura de tu navbar */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-image: linear-gradient(135deg, transparent 0%, transparent 21%,rgba(131, 20, 209,0.4) 21%, rgba(131, 20, 209,0.4) 51%,transparent 51%, transparent 100%),linear-gradient(45deg, transparent 0%, transparent 16%,rgb(131, 20, 209) 16%, rgb(131, 20, 209) 21%,rgb(88, 22, 184) 21%, rgb(88, 22, 184) 64%,transparent 64%, transparent 100%),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255)); 
-    background-size: cover;
-    background-position: center;
-}
-
 .wrapper {
     width: 400px;
     background: transparent;
@@ -27,7 +9,8 @@ body {
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
-	margin-top: 80px;
+    margin: 0 auto; /* Add this line to center the wrapper */
+    margin-top: 80px;
 }
 
 .wrapper h4 {
